# IntersectionOfSegment

./: CMakeLists.txt
include/: Vector3D.h
src/: Vector3D.cpp
test/: tests.cpp
